src/test/ui/error-codes/E0059.stderr
error[E0059]: type parameter to bare `Fn` trait must be a tuple
  --> $DIR/E0059.rs:3:11
   |
LL | fn foo<F: Fn<i32>>(f: F) -> F::Output { f(3) }
   |           ^^^^^^^ the trait `Tuple` is not implemented for `i32`
   |
note: required by a bound in `Fn`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error: aborting due to previous error

For more information about this error, try `rustc --explain E0059`.
